# sdk-conformance

./: .gitignore  .pre-commit-config.yaml  README.md  SPEC.md
.github/workflows/: conformance-test.yml
actions/conformance/: action.yml  pyproject.toml
actions/conformance/conformance/: __main__.py
actions/conformance/conformance/tests/: conftest.py  test_1.py  test_runner.py  transforms.py
actions/conformance/conformance/tests/data/assessment-plans/example/: assessment-plan.json
actions/conformance/conformance/tests/data/component-definitions/example/: component-definition.json
actions/conformance/conformance/tests/data/profiles/example/: profile.json
